# apiary

./: .copilot-instructions.md  .envrc  .gitignore  Brewfile  Brewfile.lock.json  Cargo.toml  README.md  TESTING.md  build.sh  report_card.sh  validate.sh
.cursor/: prompt
.github/workflows/: ci.yml  release.yml  tools.yml
examples/: board.json  dataset.json  events.json  query.json  trigger.json
src/: api_keys.rs  auth.rs  boards.rs  burn_alerts.rs  calculated_fields.rs  client.rs  columns.rs  common.rs  dataset_definitions.rs  datasets.rs  environments.rs  errors.rs  lib.rs  main.rs  marker_settings.rs  markers.rs  queries.rs  query_annotations.rs  recipients.rs  slos.rs  triggers.rs
tests/: api_coverage_tests.rs  environments_tests.rs  error_handling_tests.rs  events_integration_tests.rs  integration_tests.rs  query_results_integration_tests.rs  service_maps_reporting_tests.rs  test_utils.rs  unit_tests.rs
