[package]
name = "apiary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", features = ["serde"] }
